--- a/internal/tscode/node.tmpl
+++ b/internal/tscode/node.tmpl
@@ -1,5 +1,6 @@
-import {loadEnt, ID, loadEntX, LoadEntOptions, createEnt, editEnt, deleteEnt} from "../../../../src/ent"
-import { v4 as uuidv4 } from 'uuid';
+import {loadEnt, ID, loadEntX, LoadEntOptions, createEnt, editEnt, deleteEnt} from "../../../../src/ent";
+import {Field, getFields} from "../../../../src/schema";
+import schema from './../schema/{{.NodeData.PackageName}}';
 
 {{with .NodeData -}}
 const tableName = "{{.TableName}}";
@@ -37,6 +38,19 @@ export default class {{.Node}} {
     ];
   }
 
+  private static schemaFields: Map<string,Field>;
+
+  private static getSchemaFields(): Map<string, Field> {
+    if ({{.Node}}.schemaFields != null) {
+      return {{.Node}}.schemaFields;
+    }
+    return {{.Node}}.schemaFields = getFields(schema);
+  }
+
+  static getField(key: string): Field | undefined{
+    return {{.Node}}.getSchemaFields().get(key);
+  }
+
   private static getOptions(): LoadEntOptions<{{.Node}}> {
     return {
       tableName: tableName,
@@ -45,4 +59,92 @@ export default class {{.Node}} {
     };
   }
 }
+
+// no actions yet so we support full create, edit, delete for now
+export interface {{.Node}}CreateInput {
+  {{range $field := .FieldInfo.Fields -}}
+  {{ if $field.EditableField -}}
+    {{/* if nullable or has default value, make it optional */ -}}
+    {{if or $field.Nullable $field.HasDefaultValueOnCreate -}}
+      {{$field.TsFieldName}}?: {{$field.TsType}};
+    {{else -}}
+      {{$field.TsFieldName}}: {{$field.TsType}};
+    {{end -}}
+  {{ end -}}
+  {{end}}
+}
+
+export interface {{.Node}}EditInput {
+  {{range $field := .FieldInfo.Fields -}}
+  {{ if $field.EditableField -}}
+      {{$field.TsFieldName}}?: {{$field.TsType}};
+  {{ end -}}
+  {{end}}
+}
+
+function defaultValue (key: string, property: string): any {
+  let fn = {{.Node}}.getField(key)?.[property];
+  if (!fn) {
+    return null;
+  }
+  return fn();
+};
+
+export async function create{{.Node}}(input: {{.Node}}CreateInput): Promise<{{.Node}} | null> {
+  let fields  = {
+    {{range $field := .FieldInfo.Fields -}}
+    {{ if $field.EditableField -}}
+      "{{$field.GetDbColName}}": input.{{$field.TsFieldName}},
+    {{ else if $field.HasDefaultValueOnCreate -}}
+      "{{$field.GetDbColName}}": defaultValue("{{$field.FieldName}}", "defaultValueOnCreate"),
+    {{end -}}
+    {{end -}}
+  };
+
+  return await createEnt(
+    {
+      tableName: tableName,
+      fields: fields,
+      ent: {{.Node}},
+    }
+  );
+}
+
+export async function edit{{.Node}}(id: ID, input: {{.Node}}EditInput): Promise<{{.Node}} | null> {
+  const setField = function(key: string, value: any) {
+    if (value !== undefined) { // nullable fields allowed
+      fields[key] = value;
+    }
+  };
+  let fields  = {
+    {{range $field := .FieldInfo.Fields -}}
+    {{ if $field.HasDefaultValueOnEdit -}}
+      "{{$field.GetDbColName}}": defaultValue("{{$field.FieldName}}", "defaultValueOnEdit"),
+    {{end -}}
+    {{end -}}
+  };
+  {{range $field := .FieldInfo.Fields -}}
+  {{ if $field.EditableField -}}
+  setField("{{$field.GetDbColName}}", input.{{$field.TsFieldName}});
+  {{end -}}
+  {{end}}
+
+  return await editEnt(
+    id,
+    {
+      tableName: tableName,
+      fields: fields,
+      ent: {{.Node}},
+    }
+  );
+}
+
+export async function delete{{.Node}}(id: ID): Promise<null> {
+  return await deleteEnt(
+    id,
+    {
+      tableName: tableName,
+    }
+  );
+};
 {{end -}}
