make importing ent/code slightly easier
these are temporary/only needed until we push to npm or different package repository

--- a/internal/tscode/node.tmpl
+++ b/internal/tscode/node.tmpl
@@ -1,5 +1,6 @@
-import {loadEnt, ID, Viewer, loadEntX, LoadEntOptions, createEnt, editEnt, deleteEnt} from "../../../../src/ent";
-import {Field, getFields} from "../../../../src/schema";
+// these are dependent on having the right tsconfig.json file...
+import {loadEnt, ID, Viewer, loadEntX, LoadEntOptions, createEnt, editEnt, deleteEnt} from "ent/ent";
+import {Field, getFields} from "ent/schema";
 import schema from './../schema/{{.NodeData.PackageName}}';
 
 {{with .NodeData -}}
