--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -1,37 +1,50 @@
 // these are dependent on having the right tsconfig.json file...
-import {loadEnt, ID, Viewer, loadEntX, LoadEntOptions, createEnt, editEnt, deleteEnt} from "ent/ent";
-import {AlwaysAllowRule, PrivacyPolicy} from "ent/privacy";
-import {Field, getFields} from "ent/schema";
-import schema from './../schema/{{.NodeData.PackageName}}';
-
 {{with .NodeData -}}
+import {loadEnt, ID, Viewer, loadEntX, LoadEntOptions, createEnt, editEnt, deleteEnt} from "ent/ent";
+import {AlwaysDenyRule, PrivacyPolicy} from "ent/privacy";
+import {Field, getFields} from "ent/schema";
+import schema from './../../schema/{{.PackageName}}';
+
 const tableName = "{{.TableName}}";
 
-export default class {{.Node}} {
+{{$baseClass := printf "%sBase" .Node -}}
+{{$constructor := "arg: new (viewer: Viewer, id: ID, data: {}) => T"}}
+
+export abstract class {{$baseClass}} {
 
   {{range $field := .FieldInfo.Fields -}}
     readonly {{$field.TsFieldName}}: {{$field.TsType}};
   {{end}}
 
-  constructor(public viewer: Viewer, id: ID, options:{}) {
+  constructor(public viewer: Viewer, id: ID, data:{}) {
     this.id = id;
     // TODO don't double read id
     {{range $field := .FieldInfo.Fields -}}
-      this.{{$field.TsFieldName}} = options['{{$field.GetDbColName}}'];
+      this.{{$field.TsFieldName}} = data['{{$field.GetDbColName}}'];
     {{end}}
   }
 
-  // TODO change defaults here 
+  // by default, we always deny and it's up to the ent 
+  // to overwrite this privacy policy in its subclasses
+  {{/* TODO: make this configurable */}} 
   privacyPolicy: PrivacyPolicy = {
-    rules: [AlwaysAllowRule],
+    rules: [AlwaysDenyRule],
   };
 
-  static async load(viewer: Viewer, id: ID): Promise<{{.Node}} | null>{
-    return loadEnt(viewer, id, {{.Node}}.getOptions());
+  protected static async loadFrom<T extends {{$baseClass}}>(
+    viewer: Viewer, 
+    id: ID,
+    {{$constructor}},
+  ): Promise<T | null>{
+    return loadEnt(viewer, id, {{$baseClass}}.getOptions(arg));
   }
 
-  static async loadX(viewer: Viewer, id: ID): Promise<{{.Node}}> {
-    return loadEntX(viewer, id, {{.Node}}.getOptions());
+  protected static async loadXFrom<T extends {{$baseClass}}>(
+    viewer: Viewer, 
+    id: ID,
+    {{$constructor}},
+  ): Promise<T> {
+    return loadEntX(viewer, id, {{$baseClass}}.getOptions(arg));
   }
 
   private static getFields(): string[] {
@@ -45,21 +58,23 @@ export default class {{.Node}} {
   private static schemaFields: Map<string,Field>;
 
   private static getSchemaFields(): Map<string, Field> {
-    if ({{.Node}}.schemaFields != null) {
-      return {{.Node}}.schemaFields;
+    if ({{$baseClass}}.schemaFields != null) {
+      return {{$baseClass}}.schemaFields;
     }
-    return {{.Node}}.schemaFields = getFields(schema);
+    return {{$baseClass}}.schemaFields = getFields(schema);
   }
 
   static getField(key: string): Field | undefined{
-    return {{.Node}}.getSchemaFields().get(key);
+    return {{$baseClass}}.getSchemaFields().get(key);
   }
 
-  private static getOptions(): LoadEntOptions<{{.Node}}> {
+  private static getOptions<T extends {{$baseClass}}>(
+    {{$constructor}},
+  ): LoadEntOptions<T> {
     return {
       tableName: tableName,
-      fields: {{.Node}}.getFields(),
-      ent: {{.Node}},
+      fields: {{$baseClass}}.getFields(),
+      ent: arg,
     };
   }
 }
@@ -87,14 +102,18 @@ export interface {{.Node}}EditInput {
 }
 
 function defaultValue (key: string, property: string): any {
-  let fn = {{.Node}}.getField(key)?.[property];
+  let fn = {{$baseClass}}.getField(key)?.[property];
   if (!fn) {
     return null;
   }
   return fn();
 };
 
-export async function create{{.Node}}(viewer: Viewer, input: {{.Node}}CreateInput): Promise<{{.Node}} | null> {
+export async function create{{.Node}}From<T extends {{$baseClass}}>(
+  viewer: Viewer, 
+  input: {{.Node}}CreateInput,
+  {{$constructor}},
+  ): Promise<T | null> {
   let fields  = {
     {{range $field := .FieldInfo.Fields -}}
       {{ if $field.EditableField -}}
@@ -110,12 +129,17 @@ export async function create{{.Node}}(viewer: Viewer, input: {{.Node}}CreateInpu
     {
       tableName: tableName,
       fields: fields,
-      ent: {{.Node}},
+      ent: arg,
     }
   );
 }
 
-export async function edit{{.Node}}(viewer: Viewer, id: ID, input: {{.Node}}EditInput): Promise<{{.Node}} | null> {
+export async function edit{{.Node}}From<T extends {{$baseClass}}>(
+  viewer: Viewer, 
+  id: ID, 
+  input: {{.Node}}EditInput,
+  {{$constructor}},
+): Promise<T | null> {
   const setField = function(key: string, value: any) {
     if (value !== undefined) { // nullable fields allowed
       fields[key] = value;
@@ -140,7 +164,7 @@ export async function edit{{.Node}}(viewer: Viewer, id: ID, input: {{.Node}}Edit
     {
       tableName: tableName,
       fields: fields,
-      ent: {{.Node}},
+      ent: arg,
     }
   );
 }
