--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -3,7 +3,7 @@
 import {loadEnt, ID, Viewer, loadEntX, LoadEntOptions, createEnt, editEnt, deleteEnt} from "ent/ent";
 import {AlwaysDenyRule, PrivacyPolicy} from "ent/privacy";
 import {Field, getFields} from "ent/schema";
-import schema from './../../schema/{{.PackageName}}';
+import schema from "src/schema/{{.PackageName}}";
 
 const tableName = "{{.TableName}}";
 
