provide loaderOptions to make it easier to load other nodes of a different type. similar to the Loader objects in golang.
I don't like the loaderOptions so may rename to Loader.

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -36,7 +36,7 @@ export class {{$baseClass}} {
     viewer: Viewer, 
     id: ID,
   ): Promise<InstanceType<T> | null>{
-    return loadEnt(viewer, id, {{$baseClass}}.getOptions(this)) as InstanceType<T> | null;
+    return loadEnt(viewer, id, this.loaderOptions()) as InstanceType<T> | null;
   }
 
   static async loadX<T extends typeof {{$baseClass}}>(
@@ -44,7 +44,17 @@ export class {{$baseClass}} {
     viewer: Viewer, 
     id: ID,
   ): Promise<InstanceType<T>> {
-    return loadEntX(viewer, id, {{$baseClass}}.getOptions(this)) as InstanceType<T>;
+    return loadEntX(viewer, id, this.loaderOptions()) as InstanceType<T>;
+  }
+
+  static loaderOptions<T extends {{$baseClass}}>(
+    this: new (viewer: Viewer, id: ID, data: {}) => T,
+  ): LoadEntOptions<T> {
+    return {
+      tableName: tableName,
+      fields: {{$baseClass}}.getFields(),
+      ent: this,
+    };
   }
 
   private static getFields(): string[] {
@@ -66,16 +76,6 @@ export class {{$baseClass}} {
 
   static getField(key: string): Field | undefined{
     return {{$baseClass}}.getSchemaFields().get(key);
-  }
-
-  private static getOptions<T extends {{$baseClass}}>(
-    {{$constructor}},
-  ): LoadEntOptions<T> {
-    return {
-      tableName: tableName,
-      fields: {{$baseClass}}.getFields(),
-      ent: arg,
-    };
   }
 }
 
