--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -12,6 +12,7 @@ import {
   deleteEnt, 
   AssocEdge,
   loadEdges,
+  loadRawEdgeCountX,
   loadNodesByEdge,
 } from "ent/ent";
 import {AlwaysDenyRule, PrivacyPolicy} from "ent/privacy";
@@ -110,6 +111,10 @@ export class {{$baseClass}} {
 
       load{{$edgeName}}():Promise<{{.Node}}[]> {
         return loadNodesByEdge(this.viewer, this.id, EdgeType.{{$edge.TsEdgeConst}}, {{.Node}}.loaderOptions());
+      }
+
+      load{{$edgeName}}RawCountX():Promise<number> {
+        return loadRawEdgeCountX(this.id, EdgeType.{{$edge.TsEdgeConst}});
       }
      {{end -}}
     {{end -}}
