--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -15,11 +15,13 @@ import {
   loadRawEdgeCountX,
   loadNodesByEdge,
   loadEdgeForID2,
+  loadEntsFromClause,
 } from "ent/ent";
 import {AlwaysDenyRule, PrivacyPolicy} from "ent/privacy";
 import {Field, getFields} from "ent/schema";
 import schema from "src/schema/{{.PackageName}}";
 import { EdgeType } from "src/ent/const";
+import * as query from "ent/query";
 {{ range .GetUniqueNodes -}} 
   import {{.Node}} from "src/ent/{{.PackageName}}";
 {{ end}}
@@ -121,7 +123,17 @@ export class {{$baseClass}} {
       load{{$edge.Singular}}EdgeFor(id2: ID):Promise<AssocEdge|undefined> {
         return loadEdgeForID2(this.id, EdgeType.{{$edge.TsEdgeConst}}, id2);
       }
-     {{end -}}
+     {{end}}
+    {{end -}}
+  {{end -}}
+
+  {{ range $edge := .EdgeInfo.ForeignKeys -}}
+    {{$edgeName := .CamelCaseEdgeName -}}
+    {{with .NodeInfo -}}
+      load{{$edgeName}}(): Promise<{{.Node}}[]> {
+        return loadEntsFromClause(this.viewer, query.Eq({{$edge.QuotedDBColName}}, this.id), {{.Node}}.loaderOptions());
+      }
+
     {{end -}}
   {{end -}}
 }
