--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -6,6 +6,7 @@ import {
   ID, 
   Viewer, 
   loadEntX, 
+  loadEnts,
   LoadEntOptions, 
   createEnt, 
   editEnt, 
@@ -66,6 +67,14 @@ export class {{$baseClass}} {
     id: ID,
   ): Promise<InstanceType<T>> {
     return loadEntX(viewer, id, this.loaderOptions()) as InstanceType<T>;
+  }
+
+  static async loadMany<T extends {{$baseClass}}>(
+    this: new (viewer: Viewer, id: ID, data: {}) => T,
+    viewer: Viewer,
+    ...ids: ID[],
+  ): Promise<T[]> {
+    return loadEnts(viewer, {{$baseClass}}.loaderOptions.apply(this), ...ids);
   }
 
   static loaderOptions<T extends {{$baseClass}}>(
