--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -6,6 +6,7 @@ import {
   ID, 
   Viewer, 
   loadEntX, 
+  loadEnts,
   LoadEntOptions, 
   createEnt, 
   editEnt, 
@@ -30,6 +31,7 @@ const tableName = "{{.TableName}}";
 
 {{$baseClass := printf "%sBase" .Node -}}
 {{$constructor := "arg: new (viewer: Viewer, id: ID, data: {}) => T"}}
+{{$thisType := "new (viewer: Viewer, id: ID, data: {}) => T"}}
 
 export class {{$baseClass}} {
 
@@ -52,20 +54,28 @@ export class {{$baseClass}} {
     rules: [AlwaysDenyRule],
   };
 
-  static async load<T extends typeof {{$baseClass}}>(
-    this: T,
+  static async load<T extends {{$baseClass}}>(
+    this: {{$thisType}},
     viewer: Viewer, 
     id: ID,
-  ): Promise<InstanceType<T> | null>{
-    return loadEnt(viewer, id, this.loaderOptions()) as InstanceType<T> | null;
+  ): Promise<T | null>{
+    return loadEnt(viewer, id, {{$baseClass}}.loaderOptions.apply(this));
   }
 
-  static async loadX<T extends typeof {{$baseClass}}>(
-    this: T,
+  static async loadX<T extends {{$baseClass}}>(
+    this: {{$thisType}},
     viewer: Viewer, 
     id: ID,
-  ): Promise<InstanceType<T>> {
-    return loadEntX(viewer, id, this.loaderOptions()) as InstanceType<T>;
+  ): Promise<T> {
+    return loadEntX(viewer, id, {{$baseClass}}.loaderOptions.apply(this));
+  }
+
+  static async loadMany<T extends {{$baseClass}}>(
+    this: new (viewer: Viewer, id: ID, data: {}) => T,
+    viewer: Viewer,
+    ...ids: ID[],
+  ): Promise<T[]> {
+    return loadEnts(viewer, {{$baseClass}}.loaderOptions.apply(this), ...ids);
   }
 
   static loaderOptions<T extends {{$baseClass}}>(
