--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -1,36 +1,21 @@
-// these are dependent on having the right tsconfig.json file...
 {{with .NodeData -}}
-{{/* TODO handle imports that are not used. similar to reserveImport in goland */ -}}
-import {
-  loadEnt, 
-  ID, 
-  Viewer, 
-  loadEntX, 
-  loadEnts,
-  LoadEntOptions, 
-  createEnt, 
-  editEnt, 
-  deleteEnt, 
-  AssocEdge,
-  loadEdges,
-  loadRawEdgeCountX,
-  loadNodesByEdge,
-  loadEdgeForID2,
-  loadEntsFromClause,
-  loadEntFromClause,
-  loadEntXFromClause,
-  loadRow,
-  loadUniqueEdge,
-  loadUniqueNode,
-} from "ent/ent";
-import {AlwaysDenyRule, PrivacyPolicy} from "ent/privacy";
-import {Field, getFields} from "ent/schema";
-import schema from "src/schema/{{.PackageName}}";
-import { EdgeType } from "src/ent/const";
-import * as query from "ent/query";
+{{/* TODO break this up to make it easier to use? */}}
+{{/* these are dependent on having the right tsconfig.json file... */}}
+{{ reserveImport "ent/ent" "loadEnt" "ID" "Viewer" "loadEntX" "loadEnts" "LoadEntOptions" "createEnt" "editEnt" "deleteEnt" "AssocEdge" "loadEdges" "loadRawEdgeCountX" "loadNodesByEdge" "loadEdgeForID2" "loadEntsFromClause" "loadEntFromClause" "loadEntXFromClause" "loadRow" "loadUniqueEdge" "loadUniqueNode" }}
+{{ reserveImport "ent/privacy" "AlwaysDenyRule" "PrivacyPolicy"}}
+{{ reserveImport "ent/schema" "Field" "getFields"}}
+{{ $schemaPath := printf "src/schema/%s" .PackageName }}
+{{ reserveDefaultImport $schemaPath "schema"}}
+{{ reserveImport "src/ent/const" "EdgeType" }}
+{{ reserveAllImport "ent/query" "query" }}
+
 {{ range .GetUniqueNodes -}} 
-  import {{.Node}} from "src/ent/{{.PackageName}}";
+  {{$packagePath := printf "src/ent/%s" .PackageName }}
+  {{ reserveDefaultImport $packagePath .Node}}
 {{ end}}
+
+{{$viewerType := useImport "Viewer"}}
+{{$idType := useImport "ID" }}
 
 const tableName = "{{.TableName}}";
 
@@ -44,7 +29,7 @@ export class {{$baseClass}} {
     readonly {{$field.TsFieldName}}: {{$field.TsType}};
   {{end}}
 
-  constructor(public viewer: Viewer, id: ID, data:{}) {
+  constructor(public viewer: {{$viewerType}}, id: {{$idType}}, data:{}) {
     this.id = id;
     // TODO don't double read id
     {{range $field := .FieldInfo.Fields -}}
@@ -55,42 +40,54 @@ export class {{$baseClass}} {
   // by default, we always deny and it's up to the ent 
   // to overwrite this privacy policy in its subclasses
   {{/* TODO: make this configurable */}} 
-  privacyPolicy: PrivacyPolicy = {
-    rules: [AlwaysDenyRule],
+  privacyPolicy: {{useImport "PrivacyPolicy"}} = {
+    rules: [{{useImport "AlwaysDenyRule"}}],
   };
 
   static async load<T extends {{$baseClass}}>(
     this: {{$thisType}},
-    viewer: Viewer, 
-    id: ID,
+    viewer: {{$viewerType}}, 
+    id: {{$idType}},
   ): Promise<T | null>{
-    return loadEnt(viewer, id, {{$baseClass}}.loaderOptions.apply(this));
+    return {{useImport "loadEnt"}}(
+      viewer, 
+      id, 
+      {{$baseClass}}.loaderOptions.apply(this),
+    );
   }
 
   static async loadX<T extends {{$baseClass}}>(
     this: {{$thisType}},
-    viewer: Viewer, 
-    id: ID,
+    viewer: {{$viewerType}}, 
+    id: {{$idType}},
   ): Promise<T> {
-    return loadEntX(viewer, id, {{$baseClass}}.loaderOptions.apply(this));
+    return {{useImport "loadEntX"}}(
+      viewer, 
+      id, 
+      {{$baseClass}}.loaderOptions.apply(this),
+    );
   }
 
   static async loadMany<T extends {{$baseClass}}>(
     this: {{$thisType}},
-    viewer: Viewer,
-    ...ids: ID[],
+    viewer: {{$viewerType}},
+    ...ids: {{$idType}}[],
   ): Promise<T[]> {
-    return loadEnts(viewer, {{$baseClass}}.loaderOptions.apply(this), ...ids);
+    return {{useImport "loadEnts"}}(
+      viewer, 
+      {{$baseClass}}.loaderOptions.apply(this), 
+      ...ids,
+    );
   }
 
   {{ range $field := .FieldInfo.Fields -}}
     {{ if or $field.Index $field.Unique -}}
       static async loadFrom{{$field.CamelCaseName}}<T extends {{$baseClass}}>(
         this: {{$thisType}},
-        viewer: Viewer,
+        viewer: {{$viewerType}},
         {{$field.TsFieldName}}: {{$field.GetNotNullableTsType}},
       ): Promise<T | null> {
-        return loadEntFromClause(
+        return {{useImport "loadEntFromClause"}}(
           viewer, 
           {{$baseClass}}.loaderOptions.apply(this), 
           query.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
@@ -102,7 +99,7 @@ export class {{$baseClass}} {
         viewer: Viewer,
         {{$field.TsFieldName}}: {{$field.GetNotNullableTsType}},
       ): Promise<T> {
-        return loadEntXFromClause(
+        return {{useImport "loadEntXFromClause"}}(
           viewer, 
           {{$baseClass}}.loaderOptions.apply(this), 
           query.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
@@ -112,8 +109,8 @@ export class {{$baseClass}} {
       static async loadIDFrom{{$field.CamelCaseName}}<T extends {{$baseClass}}>(
         this: {{$thisType}},
         {{$field.TsFieldName}}: {{$field.GetNotNullableTsType}},
-      ): Promise<ID | null> {
-        const row = await loadRow({
+      ): Promise<{{$idType}} | null> {
+        const row = await {{useImport "loadRow"}}({
           ...{{$baseClass}}.loaderOptions.apply(this),
           clause: query.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
         }); 
@@ -125,8 +122,8 @@ export class {{$baseClass}} {
   {{end -}}
 
   static loaderOptions<T extends {{$baseClass}}>(
-    this: new (viewer: Viewer, id: ID, data: {}) => T,
-  ): LoadEntOptions<T> {
+    this: new (viewer: {{$viewerType}}, id: {{$idType}}, data: {}) => T,
+  ): {{useImport "LoadEntOptions"}}<T> {
     return {
       tableName: tableName,
       fields: {{$baseClass}}.getFields(),
@@ -142,16 +139,16 @@ export class {{$baseClass}} {
     ];
   }
 
-  private static schemaFields: Map<string,Field>;
+  private static schemaFields: Map<string, {{useImport "Field"}}>;
 
-  private static getSchemaFields(): Map<string, Field> {
+  private static getSchemaFields(): Map<string, {{useImport "Field"}}> {
     if ({{$baseClass}}.schemaFields != null) {
       return {{$baseClass}}.schemaFields;
     }
-    return {{$baseClass}}.schemaFields = getFields(schema);
+    return {{$baseClass}}.schemaFields = {{useImport "getFields"}}({{useImport "schema"}});
   }
 
-  static getField(key: string): Field | undefined{
+  static getField(key: string): {{useImport "Field"}} | undefined{
     return {{$baseClass}}.getSchemaFields().get(key);
   }
 
@@ -160,31 +157,56 @@ export class {{$baseClass}} {
     {{$edgeName := .CamelCaseEdgeName -}}
     {{$uniqueEdge := .Unique -}}
     {{with .NodeInfo -}}
+    {{$edgeType := useImport "EdgeType"}}
+    {{$assocEdgeType := useImport "AssocEdge"}}
      {{/* TODO unique edges */}}
      {{ if $uniqueEdge -}}
-      load{{$edgeName}}Edge(): Promise<AssocEdge | null> {
-        return loadUniqueEdge(this.id, EdgeType.{{$edge.TsEdgeConst}});
+      load{{$edgeName}}Edge(): Promise<{{$assocEdgeType}} | null> {
+        return {{useImport "loadUniqueEdge"}}(
+          this.id, 
+          {{$edgeType}}.{{$edge.TsEdgeConst}},
+        );
       }
 
       load{{$edgeName}}(): Promise<{{.Node}} | null> {
-        return loadUniqueNode(this.viewer, this.id, EdgeType.{{$edge.TsEdgeConst}}, {{.Node}}.loaderOptions());
+        return {{useImport "loadUniqueNode"}}(
+          this.viewer, 
+          this.id, 
+          {{$edgeType}}.{{$edge.TsEdgeConst}}, 
+          {{.Node}}.loaderOptions(),
+        );
       }
 
      {{ else -}}
-      load{{$edgeName}}Edges():Promise<AssocEdge[]> {
-        return loadEdges(this.id, EdgeType.{{$edge.TsEdgeConst}});
+      load{{$edgeName}}Edges():Promise<{{$assocEdgeType}}[]> {
+        return {{useImport "loadEdges"}}(
+          this.id, 
+          {{$edgeType}}.{{$edge.TsEdgeConst}},
+        );
       }
 
-      load{{$edgeName}}():Promise<{{.Node}}[]> {
-        return loadNodesByEdge(this.viewer, this.id, EdgeType.{{$edge.TsEdgeConst}}, {{.Node}}.loaderOptions());
+      load{{$edgeName}}():Promise<{{useImport .Node}}[]> {
+        return {{useImport "loadNodesByEdge"}}(
+          this.viewer, 
+          this.id, 
+          {{$edgeType}}.{{$edge.TsEdgeConst}}, 
+          {{useImport .Node}}.loaderOptions(),
+        );
       }
 
       load{{$edgeName}}RawCountX():Promise<number> {
-        return loadRawEdgeCountX(this.id, EdgeType.{{$edge.TsEdgeConst}});
+        return {{useImport "loadRawEdgeCountX"}}(
+          this.id, 
+          {{$edgeType}}.{{$edge.TsEdgeConst}},
+        );
       }
 
-      load{{$edge.Singular}}EdgeFor(id2: ID):Promise<AssocEdge|undefined> {
-        return loadEdgeForID2(this.id, EdgeType.{{$edge.TsEdgeConst}}, id2);
+      load{{$edge.Singular}}EdgeFor(id2: {{$idType}}):Promise<{{$assocEdgeType}}|undefined> {
+        return {{useImport "loadEdgeForID2"}}(
+          this.id, 
+          {{$edgeType}}.{{$edge.TsEdgeConst}}, 
+          id2,
+        );
       }
      {{end}}
     {{end -}}
@@ -193,11 +215,11 @@ export class {{$baseClass}} {
   {{ range $edge := .EdgeInfo.ForeignKeys -}}
     {{$edgeName := .CamelCaseEdgeName -}}
     {{with .NodeInfo -}}
-      load{{$edgeName}}(): Promise<{{.Node}}[]> {
-        return loadEntsFromClause(
+      load{{$edgeName}}(): Promise<{{useImport .Node}}[]> {
+        return {{useImport "loadEntsFromClause"}}(
           this.viewer, 
-          query.Eq({{$edge.QuotedDBColName}}, this.id), 
-          {{.Node}}.loaderOptions(),
+          {{useImport "query"}}.Eq({{$edge.QuotedDBColName}}, this.id), 
+          {{useImport .Node}}.loaderOptions(),
         );
       }
 
@@ -207,19 +229,19 @@ export class {{$baseClass}} {
   {{ range $edge := .EdgeInfo.FieldEdges -}}
     {{$edgeName := .CamelCaseEdgeName -}}
     {{with .NodeInfo -}}
-      load{{$edgeName}}(): Promise<{{.Node}}|null> {
-        return loadEnt(
+      load{{$edgeName}}(): Promise<{{useImport .Node}}|null> {
+        return {{useImport "loadEnt"}}(
           this.viewer, 
           this.{{$edge.FieldName}},
-          {{.Node}}.loaderOptions(),
+          {{useImport .Node}}.loaderOptions(),
         );
       }
 
-      load{{$edgeName}}X(): Promise<{{.Node}}> {
-        return loadEntX(
+      load{{$edgeName}}X(): Promise<{{useImport .Node}}> {
+        return {{useImport "loadEntX"}}(
           this.viewer, 
           this.{{$edge.FieldName}},
-          {{.Node}}.loaderOptions(),
+          {{useImport .Node}}.loaderOptions(),
         );
       }
     {{end -}}
@@ -257,7 +279,7 @@ function defaultValue (key: string, property: string): any {
 };
 
 export async function create{{.Node}}From<T extends {{$baseClass}}>(
-  viewer: Viewer, 
+  viewer: {{$viewerType}}, 
   input: {{.Node}}CreateInput,
   {{$constructor}},
   ): Promise<T | null> {
@@ -271,7 +293,7 @@ export async function create{{.Node}}From<T extends {{$baseClass}}>(
     {{end -}}
   };
 
-  return await createEnt(
+  return await {{useImport "createEnt"}}(
     viewer, 
     {
       tableName: tableName,
@@ -282,8 +304,8 @@ export async function create{{.Node}}From<T extends {{$baseClass}}>(
 }
 
 export async function edit{{.Node}}From<T extends {{$baseClass}}>(
-  viewer: Viewer, 
-  id: ID, 
+  viewer: {{$viewerType}}, 
+  id: {{$idType}}, 
   input: {{.Node}}EditInput,
   {{$constructor}},
 ): Promise<T | null> {
@@ -305,7 +327,7 @@ export async function edit{{.Node}}From<T extends {{$baseClass}}>(
     {{end -}}
   {{end}}
 
-  return await editEnt(
+  return await {{useImport "editEnt"}}(
     viewer,
     id,
     {
@@ -317,7 +339,7 @@ export async function edit{{.Node}}From<T extends {{$baseClass}}>(
 }
 
 export async function delete{{.Node}}(viewer: Viewer, id: ID): Promise<null> {
-  return await deleteEnt(
+  return await {{useImport "deleteEnt"}}(
     viewer,
     id,
     {
