--- a/internal/tscode/ent.tmpl
+++ b/internal/tscode/ent.tmpl
@@ -1,36 +1,37 @@
 {{with .NodeData -}}
-import { 
-  {{.Node}}Base,
-  {{.Node}}CreateInput,
-  {{.Node}}EditInput,
-  create{{.Node}}From,
-  edit{{.Node}}From,
-  delete{{.Node}},
-} from "./generated/{{.PackageName}}_base";
-import {ID, Viewer} from "ent/ent";
+{{$basePath := printf "./generated/%s_base" .PackageName }}
+{{$baseClass := printf "%sBase" .Node }}
+{{$createInterface := printf "%sCreateInput" .Node }}
+{{$editInterface := printf "%sEditInput" .Node }}
+{{$createFrom := printf "create%sFrom" .Node }}
+{{$editFrom := printf "edit%sFrom" .Node }}
+{{$deleteNode := printf "delete%s" .Node }}
+
+{{ reserveImport $basePath $baseClass $createInterface $editInterface $createFrom $editFrom $deleteNode}}
+{{ reserveImport "ent/ent" "ID" "Viewer"}}
 
 // we're only writing this once except with --force and packageName provided
-export default class {{.Node}} extends {{.Node}}Base {
+export default class {{.Node}} extends {{useImport $baseClass}} {
 
 
 }
 
 // no actions yet so we support full create, edit, delete for now
-export { {{.Node}}CreateInput, {{.Node}}EditInput, delete{{.Node}} };
+export { {{useImport $createInterface}}, {{useImport $editInterface}}, {{useImport $deleteNode}} };
 
 export async function create{{.Node}}(
-  viewer: Viewer,
-  input: {{.Node}}CreateInput,
+  viewer: {{useImport "Viewer"}},
+  input: {{useImport $createInterface}}
 ): Promise<{{.Node}} | null> {
-  return create{{.Node}}From(viewer, input, {{.Node}});
+  return {{useImport $createFrom}}(viewer, input, {{.Node}});
 }
 
 export async function edit{{.Node}}(
-  viewer: Viewer,
-  id: ID,
-  input: {{.Node}}EditInput,
+  viewer: {{useImport "Viewer"}},
+  id: {{useImport "ID"}},
+  input: {{useImport $editInterface}}
 ): Promise<{{.Node}} | null> {
-  return edit{{.Node}}From(viewer, id, input, {{.Node}});
+  return {{useImport $editFrom}}(viewer, id, input, {{.Node}});
 }
 
 {{end -}}
