initial infrastructure to support actions (#42)
provides (all?) the interfaces that should be needed.
provides implementations of manual UserBuilder, CreateUserAction, EditUserAction, DeleteUserAction

change user.test.ts in sample to use it for a few test cases

need to convert everything to switch to using actions but still some ways to go

still some have some code duplication here with some things using actions, some things calling writeEdge(X) manually, bunch of code will need to be deleted once done here.

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -6,7 +6,7 @@
 {{ reserveImport "ent/schema" "Field" "getFields"}}
 {{ $schemaPath := printf "src/schema/%s" .PackageName }}
 {{ reserveDefaultImport $schemaPath "schema"}}
-{{ reserveImport "src/ent/const" "EdgeType" }}
+{{ reserveImport "src/ent/const" "EdgeType" "NodeType" }}
 {{ reserveAllImport "ent/query" "query" }}
 
 {{ range .GetUniqueNodes -}} 
@@ -25,6 +25,7 @@ const tableName = "{{.TableName}}";
 
 export class {{$baseClass}} {
 
+  readonly nodeType = {{useImport "NodeType"}}.{{.Node}};
   {{range $field := .FieldInfo.Fields -}}
     readonly {{$field.TsFieldName}}: {{$field.TsType}};
   {{end}}
