add actions to schema
+ parse it

--- a/internal/schema/input/read_schema.tmpl
+++ b/internal/schema/input/read_schema.tmpl
@@ -52,6 +52,7 @@ for (const key in potentialSchemas) {
     fields: fields,
     assocEdges: assocEdges,
     assocEdgeGroups: assocEdgeGroups,
+    actions: schema.actions,
   };
 }
 
